--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "aurelia-skeleton-navigation",
-  "version": "1.0.0-beta.1.1.5",
-  "description": "A starter kit for building a standard navigation-style app with Aurelia.",
+  "name": "grid-component",
+  "version": "0.0.1",
+  "description": "A declarative grid component for aurelia",
   "keywords": [
     "aurelia",
-    "navigation",
-    "skeleton"
+    "grid"
   ],
-  "homepage": "http://aurelia.io",
+  "homepage": "https://github.com/mbroadst/grid-component",
   "bugs": {
-    "url": "https://github.com/aurelia/skeleton-navigation/issues"
+    "url": "https://github.com/mbroadst/grid-component/issues"
   },
-  "license": "CC0-1.0",
-  "author": "Rob Eisenberg <rob@bluespire.com> (http://robeisenberg.com/)",
+  "license": "MIT",
+  "author": "Matt Broadstone <mbroadst@gmail.com>",
   "main": "dist/main.js",
   "repository": {
     "type": "git",
-    "url": "http://github.com/aurelia/skeleton-navigation"
+    "url": "https://github.com/mbroadst/grid-component.git"
   },
   "scripts": {
     "test": "gulp test",
@@ -25,13 +24,21 @@
   "devDependencies": {
     "aurelia-bundler": "^0.3.0",
     "aurelia-tools": "^0.1.18",
-    "babel": "^5.8.23",
-    "babel-eslint": "^4.1.3",
+    "babel-eslint": "^5.0.0",
+    "babel-plugin-syntax-flow": "^6.5.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.7.0",
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.6.5",
+    "babel-plugin-transform-flow-strip-types": "^6.7.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-stage-1": "^6.5.0",
     "browser-sync": "^2.10.0",
     "conventional-changelog": "0.0.11",
     "del": "^1.1.0",
     "gulp": "^3.8.10",
-    "gulp-babel": "^5.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-bump": "^0.3.1",
     "gulp-changed": "^1.1.0",
     "gulp-eslint": "^1.0.0",
@@ -44,7 +51,7 @@
     "jasmine-core": "^2.1.3",
     "jspm": "0.16.15",
     "karma": "^0.13.15",
-    "karma-babel-preprocessor": "^5.2.1",
+    "karma-babel-preprocessor": "^6.0.1",
     "karma-chrome-launcher": "^0.2.1",
     "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.5",
@@ -57,35 +64,26 @@
   },
   "jspm": {
     "dependencies": {
-      "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-beta.1.1.0",
-      "aurelia-binding": "npm:aurelia-binding@^1.0.0-beta.1.2.2",
-      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.1.1",
-      "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.1.0",
-      "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.1.0",
-      "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0-beta.1.1.1",
-      "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0-beta.1.1.1",
-      "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0-beta.1.1.3",
-      "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1.1.1",
-      "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0-beta.1.1.4",
-      "aurelia-polyfills": "npm:aurelia-polyfills@^1.0.0-beta.1.0.0",
-      "aurelia-router": "npm:aurelia-router@^1.0.0-beta.1.1.0",
-      "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0-beta.1.1.0",
-      "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.1.0",
-      "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.1.0",
+      "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-beta.1.2.0",
+      "aurelia-binding": "npm:aurelia-binding@^1.0.0-beta.1.3.0",
+      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.2.0",
+      "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.2.0",
+      "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.2.0",
+      "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0-beta.1.2.0",
+      "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0-beta.1.2.0",
+      "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0-beta.1.2.0",
+      "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1.2.0",
+      "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0-beta.1.2.0",
+      "aurelia-polyfills": "npm:aurelia-polyfills@^1.0.0-beta.1.1.0",
+      "aurelia-router": "npm:aurelia-router@^1.0.0-beta.1.2.0",
+      "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0-beta.1.2.0",
+      "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.2.0",
+      "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.2.0",
       "bootstrap": "github:twbs/bootstrap@^3.3.5",
       "fetch": "github:github/fetch@^0.10.1",
       "font-awesome": "npm:font-awesome@^4.5.0",
       "text": "github:systemjs/plugin-text@^0.0.3"
     },
-    "devDependencies": {
-      "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^2.0.3"
-    },
-    "overrides": {
-      "npm:core-js@2.0.3": {
-        "main": "client/shim.min"
-      }
-    }
+    "devDependencies": {}
   }
 }
