--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   },
   "jspm": {
     "dependencies": {
+      "au-grid": "npm:au-grid@^0.0.4",
       "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-beta.1.2.0",
       "aurelia-binding": "npm:aurelia-binding@^1.0.0-beta.1.3.1",
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.2.0",
