--- a/package.json
+++ b/package.json
@@ -1,90 +1,73 @@
 {
-  "name": "grid-component",
+  "name": "au-grid-demo",
   "version": "0.0.1",
-  "description": "A declarative grid component for aurelia",
+  "description": "Demo of a declarative grid component for aurelia",
   "keywords": [
     "aurelia",
     "grid"
   ],
-  "homepage": "https://github.com/mbroadst/grid-component",
+  "homepage": "https://github.com/mbroadst/au-grid-demo",
   "bugs": {
-    "url": "https://github.com/mbroadst/grid-component/issues"
+    "url": "https://github.com/mbroadst/au-grid-demo/issues"
   },
   "license": "MIT",
   "author": "Matt Broadstone <mbroadst@gmail.com>",
-  "main": "dist/main.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mbroadst/grid-component.git"
+    "url": "https://github.com/mbroadst/au-grid-demo.git"
   },
   "scripts": {
-    "test": "gulp test",
-    "e2e": "gulp serve webdriver-standalone e2e"
+    "dev": "webpack-dev-server --config webpack.config.js --hot --inline --progress --devtool eval",
+    "build": "webpack --config webpack.config.js --progress --profile",
+    "prod": "webpack -p --config webpack.prod.config.js --progress --devtool source-map",
+    "test": "karma start"
+  },
+  "dependencies": {
+    "aurelia-bootstrapper-webpack": "^1.0.0-beta.1.0.0",
+    "aurelia-event-aggregator": "^1.0.0-beta.1.1.1",
+    "aurelia-fetch-client": "^1.0.0-beta.1.1.0",
+    "aurelia-framework": "^1.0.0-beta.1.1.3",
+    "aurelia-history-browser": "^1.0.0-beta.1.1.2",
+    "aurelia-logging-console": "^1.0.0-beta.1.1.4",
+    "aurelia-pal-browser": "^1.0.0-beta.1.1.4",
+    "aurelia-polyfills": "^1.0.0-beta.1.0.0",
+    "aurelia-router": "^1.0.0-beta.1.1.1",
+    "aurelia-templating-binding": "^1.0.0-beta.1.1.1",
+    "aurelia-templating-resources": "^1.0.0-beta.1.1.1",
+    "aurelia-templating-router": "^1.0.0-beta.1.1.1",
+    "au-grid": "^0.0.4",
+    "bluebird": "^3.3.4",
+    "bootstrap": "^3.3.6",
+    "font-awesome": "^4.5.0",
+    "isomorphic-fetch": "^2.2.1"
   },
   "devDependencies": {
-    "aurelia-bundler": "^0.3.0",
     "aurelia-tools": "^0.1.18",
+    "aurelia-webpack-plugin": "^1.0.0-beta.1.0.0",
+    "babel-core": "^6.7.2",
     "babel-eslint": "^5.0.0",
-    "babel-plugin-syntax-flow": "^6.5.0",
+    "babel-loader": "^6.2.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.7.0",
-    "babel-plugin-transform-es2015-modules-systemjs": "^6.6.5",
-    "babel-plugin-transform-flow-strip-types": "^6.7.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-stage-1": "^6.5.0",
-    "browser-sync": "^2.10.0",
-    "conventional-changelog": "0.0.11",
-    "del": "^1.1.0",
-    "gulp": "^3.8.10",
-    "gulp-babel": "^6.1.2",
-    "gulp-bump": "^0.3.1",
-    "gulp-changed": "^1.1.0",
-    "gulp-eslint": "^1.0.0",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-protractor": "1.0.0",
-    "gulp-sourcemaps": "^1.3.0",
-    "isparta": "^3.1.0",
-    "istanbul": "^0.3.13",
-    "jasmine-core": "^2.1.3",
-    "jspm": "0.16.15",
-    "karma": "^0.13.15",
+    "css-loader": "^0.23.1",
+    "eslint": "^1.10.3",
+    "file-loader": "^0.8.5",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.9.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.21",
     "karma-babel-preprocessor": "^6.0.1",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-coverage": "^0.5.3",
-    "karma-jasmine": "^0.3.5",
-    "karma-jspm": "2.0.1-beta.2",
-    "object.assign": "^1.0.3",
-    "require-dir": "^0.1.0",
-    "run-sequence": "^1.0.2",
-    "vinyl-paths": "^1.0.0",
-    "yargs": "^2.1.1"
-  },
-  "jspm": {
-    "dependencies": {
-      "au-grid": "npm:au-grid@^0.0.4",
-      "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-beta.1.2.0",
-      "aurelia-binding": "npm:aurelia-binding@^1.0.0-beta.1.3.1",
-      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.2.0",
-      "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.2.0",
-      "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.2.1",
-      "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0-beta.1.2.0",
-      "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0-beta.1.2.0",
-      "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0-beta.1.2.0",
-      "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1.2.0",
-      "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0-beta.1.2.0",
-      "aurelia-polyfills": "npm:aurelia-polyfills@^1.0.0-beta.1.1.1",
-      "aurelia-router": "npm:aurelia-router@^1.0.0-beta.1.2.0",
-      "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0-beta.1.2.1",
-      "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.2.1",
-      "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.2.0",
-      "bootstrap": "github:twbs/bootstrap@^3.3.5",
-      "fetch": "github:github/fetch@^0.10.1",
-      "font-awesome": "npm:font-awesome@^4.5.0",
-      "text": "github:systemjs/plugin-text@^0.0.3"
-    },
-    "devDependencies": {}
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-jasmine": "^0.3.7",
+    "karma-webpack": "^1.7.0",
+    "protractor": "^3.2.1",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "wallaby-webpack": "0.0.21",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
   }
 }
